--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>jline</artifactId>
       <version>0.9.94</version>
     </dependency>
+    <dependency>
+        <groupId>org.scode</groupId>
+        <artifactId>lrugctest</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
