--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     </dependency>
     <dependency>
         <groupId>org.scode</groupId>
-        <artifactId>lrugctest</artifactId>
+        <artifactId>plru</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
