--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
         <groupId>org.scode</groupId>
         <artifactId>plru</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </dependency>
   </dependencies>
 
