Fix test source to only contain the one test.

--- a/src/java/org/scode/lrugctest/BUILD
+++ b/src/java/org/scode/lrugctest/BUILD
@@ -17,7 +17,7 @@ java_library(
 
 java_library(
     name = "lrucache-test",
-    srcs = glob(["*.java"]),
+    srcs = ["LruCacheTest.java"],
     deps = [
         ":lrucache",
         "//:junit_junit",
