--- a/src/main/java/org/scode/lrugctest/cmdline/BUILD
+++ b/src/main/java/org/scode/lrugctest/cmdline/BUILD
@@ -1,7 +1,7 @@
 java_binary(
     name = "cmdline",
     srcs = ["Main.java"],
-    main_class = "org.scode.lrugctest.Main",
+    main_class = "org.scode.lrugctest.cmdline.Main",
     deps = [
         "//src/main/java/org/scode/lrugctest",
         "//:argparse4j",
